--- a/html_template.html
+++ b/html_template.html
@@ -15,61 +15,64 @@
         function updateFirmware() {
             fetch('/update')
             Swal.fire({
-                icon: 'info',
-                title: 'Подождите',
-                text: 'Попытка установить прошивку'
+                    icon: 'info',
+                    title: 'Подождите',
+                    text: 'Попытка установить прошивку',
+                    onBeforeOpen: () => {
+                        Swal.showLoading();
+                    });
             });
-            .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    return response.text();
-                })
-                .then(text => {
-                    if (text === 'No update available.') {
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Ошибка обновления',
-                            text: 'Произошла ошибка при обновлении прошивки: ',
-                        });
-                    } else if (text.startsWith('Update failed: ')) {
-                        const errorMessage = text.substring(15);
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Ошибка обновления',
-                            text: 'Произошла ошибка при обновлении прошивки: ' + errorMessage,
-                        });
-                    }
-                })
-                .catch(error => {
-                        Swal.fire({
-                                icon: 'info',
-                                title: 'Обновление началось',
-                                text: 'Процесс обновления начался. Пожалуйста, подождите...',
-                                showConfirmButton: false,
-                                onBeforeOpen: () => {
-                                    Swal.showLoading();
-                                });
-                        });
+        .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
                 }
+                return response.text();
+            })
+            .then(text => {
+                if (text === 'No update available.') {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Ошибка обновления',
+                        text: 'Произошла ошибка при обновлении прошивки: ',
+                    });
+                } else if (text.startsWith('Update failed: ')) {
+                    const errorMessage = text.substring(15);
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Ошибка обновления',
+                        text: 'Произошла ошибка при обновлении прошивки: ' + errorMessage,
+                    });
+                }
+            })
+            .catch(error => {
+                    Swal.fire({
+                            icon: 'info',
+                            title: 'Обновление началось',
+                            text: 'Процесс обновления начался. Пожалуйста, подождите...',
+                            showConfirmButton: false,
+                            onBeforeOpen: () => {
+                                Swal.showLoading();
+                            });
+                    });
+            }
 
-            fetch('/version')
-                .then(response => response.text())
-                .then(version => {
-                    if (version) {
-                        document.getElementById('updateButton').innerText = 'Обновить до версии: ' + version;
-                        document.getElementById('updateButton').disabled = false;
-                        document.getElementById('updateButton').onclick = updateFirmware;
-                    } else {
-                        document.getElementById('updateButton').innerText = 'Нет новой версии';
-                        document.getElementById('updateButton').disabled = true;
-                    }
-                })
-                .catch(error => {
-                    console.error(error);
-                    document.getElementById('updateButton').innerText = 'Ошибка загрузки версии';
+        fetch('/version')
+            .then(response => response.text())
+            .then(version => {
+                if (version) {
+                    document.getElementById('updateButton').innerText = 'Обновить до версии: ' + version;
+                    document.getElementById('updateButton').disabled = false;
+                    document.getElementById('updateButton').onclick = updateFirmware;
+                } else {
+                    document.getElementById('updateButton').innerText = 'Нет новой версии';
                     document.getElementById('updateButton').disabled = true;
-                });
+                }
+            })
+            .catch(error => {
+                console.error(error);
+                document.getElementById('updateButton').innerText = 'Ошибка загрузки версии';
+                document.getElementById('updateButton').disabled = true;
+            });
     </script>
 </body>
 
