--- a/html_template.html
+++ b/html_template.html
@@ -59,7 +59,10 @@
                         onBeforeOpen: () => {
                             Swal.showLoading();
                         }
-                    });
+                    }).then(() => {
+                    setTimeout(() => {
+                        location.reload();
+                    }, 30000);
                 });
         }
 
