--- a/html_template.html
+++ b/html_template.html
@@ -61,9 +61,9 @@
                         }
                     }).then(() => {
                     setTimeout(() => {
-                        location.reload();
-                    }, 30000);
-                });
+                        location.reload(); // перезагрузить страницу
+                    }, 30000);;
+                })});
         }
 
 
