--- a/html_template.html
+++ b/html_template.html
@@ -60,9 +60,7 @@
                             Swal.showLoading();
                         }
                     });
-                    setTimeout(() => {
-                        location.reload(); // перезагрузить страницу
-                    }, 10000); // задержка в 30 секунд
+                    location.reload();
                 });
         }
 
